--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Helloooo</h1>
+    <h1>I am Yordin and this is my ITIS3135 First Course Page</h1>
 </body>
 </html>
