Add Introduction, Styles Update index
Added introduction html doc and CSS doc. Updated homepage index.html.

--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YORDIN HASTY’s MASCOT || ITIS 3135 || Homepage</title>
+    <title>YORDIN HASTY’s MASCOT || ITIS 3135 || Introduction</title>
     <link rel="stylesheet" href="./styles/default.css">
 </head>
 <body>
@@ -18,8 +18,9 @@
         </nav>
     </header>
     <main>
-        <h2>ITIS 3135 Home</h2>
-        <p>This is all the content for my ITIS 3135 class</p>
+        <h2>Introduction</h2>
+        <p>This is my introduction for my ITIS 3135 class</p>
+        <img src="" figcaption="This is a caption of my image">
     </main>
 </body>
 <footer>
