--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YORDIN HASTY’s MASCOT || ITIS 3135 || Homepage</title>
+    <title>YouthfulHedgehog || ITIS 3135 || Homepage</title>
     <link rel="stylesheet" href="./styles/default.css">
+    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <h1>YORDIN HASTY’s MASCOT || ITIS 3135</h1>
+        <h1>YouthfulHedgehog || ITIS 3135</h1>
         <nav>
             <a href="./">Home</a>
             ||
@@ -21,37 +22,36 @@
         <h2>ITIS 3135 Home</h2>
         <p>This is all the content for my ITIS 3135 class</p>
     </main>
-</body>
 <footer>
-    <nav>
-        <a href="">UNCC Homepage</a> || 
-        <a href="">Github Repo</a> || 
-        <a href="">Github.io Page</a> || 
-        <a href="">Github.io ITIS3135 Page</a> || 
-        <a href="">FreeCodeCamp Profile</a> || 
-        <a href="">Codecademy Profile</a> || 
-        <a href="">LinkedIn Profile</a>
-    </nav>
-    <h2>Designed by Hasty Designs</h2>
-    <a href="https://validator.w3.org/check?uri=referer"
-        id="validationlinkhtml">
-        <img style="border:0;width:88px;height:31px"
-            src="https://mytienhoang.github.io/itis3135/z
-            archives/html__ion.png" alt="Valid HTML!">
-    </a>
-    <a href="https://jigsaw.w3.org/css-validator/check/referer"
-        id="validationlinkcss">
-        <img style="border:0;width:88px;height:31px"
-            src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid
-            CSS!">
-    </a>
-    <script>
-        document.getElementById("validationlink__html").setAttribute("href"
-    ,
-    "https://validator.w3.org/check?uri=" + location.href);
-    document.getElementById("validationlink__css").setAttribute("href"
-    ,
-    "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-    </script>
-</footer>
+        <nav>
+            <a href="https://webpages.charlotte.edu/yhasty/">UNCC Homepage</a> || 
+            <a href="https://github.com/YordinH">Github Repo</a> || 
+            <a href="https://yordinh.github.io/">Github.io Page</a> || 
+            <a href="https://YordinH.github.io/itis3135/">Github.io ITIS3135 Page</a> || 
+            <a href="https://www.freecodecamp.org/yhasty">FreeCodeCamp Profile</a> || 
+            <a href="https://www.codecademy.com/profiles/yhasty">Codecademy Profile</a> || 
+            <a href="https://www.linkedin.com/in/yordinhasty/">LinkedIn Profile</a>
+        </nav>
+        <h2>Designed by Hasty Designs</h2>
+        <a href="https://validator.w3.org/check?uri=referer"
+            id="validationlinkhtml">
+            <img style="border:0;width:88px;height:31px"
+                src="https://mytienhoang.github.io/itis3135/zarchives/html__ion.png" alt="Valid HTML!">
+        </a>
+        <a href="https://jigsaw.w3.org/css-validator/check/referer"
+            id="validationlinkcss">
+            <img style="border:0;width:88px;height:31px"
+                src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid
+                CSS!">
+        </a>
+        <script>
+            document.getElementById("validationlink__html").setAttribute("href"
+            ,
+            "https://validator.w3.org/check?uri=" + location.href);
+            document.getElementById("validationlink__css").setAttribute("href"
+            ,
+            "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
+        </script>
+    </footer>
+</body>
 </html>
