--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouthfulHedgehog || ITIS 3135 || Homepage</title>
     <link rel="stylesheet" href="./styles/default.css">
+    <script src="https://lint.page/accumulus/accumulator.js" async="" class="accumulusDependency" crossorigin="anonymous"></script>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -43,6 +44,6 @@
     <script>
         document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
         document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-     </script>
+    </script>
 </body>
 </html>
