--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouthfulHedgehog || ITIS 3135 || Introduction</title>
     <link rel="stylesheet" href="./styles/default.css">
+    <script src="https://lint.page/accumulus/accumulator.js" async="" class="accumulusDependency" crossorigin="anonymous"></script>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -19,9 +20,10 @@
         </nav>
     </header>
     <main>
-        <h2>Introduction</h2>
-        <p>This is my introduction for my ITIS 3135 class</p>
-        <img src="" figcaption="This is a caption of my image" alt="An image of....">
+        <h2>ITIS 3135 Introduction</h2>
+        <p>This is the introduction for my ITIS 3135 class</p>
+        <h2>Yordin E. Hasty || Youthful Hedgehog</h2>
+        <img src="./images/profilepic.jpg">
     </main>
     <footer>
         <nav>
@@ -33,23 +35,17 @@
             <a href="https://www.codecademy.com/profiles/yhasty">Codecademy Profile</a> || 
             <a href="https://www.linkedin.com/in/yordinhasty/">LinkedIn Profile</a>
         </nav>
-        <h2>Designed by Hasty Designs</h2>
-        <a href="https://validator.w3.org/check?uri=referer"
-            id="validationlinkhtml">
-            <img style="border:0;width:88px;height:31px"
-                src="https://mytienhoang.github.io/itis3135/z
-                archives/html__ion.png" alt="Valid HTML!">
-        </a>
-        <a href="https://jigsaw.w3.org/css-validator/check/referer"
-            id="validationlinkcss">
-            <img style="border:0;width:88px;height:31px"
-                src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid
-                CSS!">
-        </a>
-        <script>
-            document.getElementById("validationlink__html").setAttribute("href", "https://validator.w3.org/check?uri=" + location.href);
-        document.getElementById("validationlink__css").setAttribute("href", "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-        </script>
+        <h2>Designed by Hasty Designs ©2025</h2>
+        <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
+            <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
+          </a>
+          <a href="https://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css">
+            <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
+          </a>
     </footer>
+    <script>
+        document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
+        document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
+    </script>
 </body>
 </html>
