--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -33,7 +33,7 @@
             <a href="https://www.codecademy.com/profiles/yhasty">Codecademy Profile</a> || 
             <a href="https://www.linkedin.com/in/yordinhasty/">LinkedIn Profile</a>
         </nav>
-        <h2>Designed by Hasty Designs</h2>
+        <h2>Designed by Hasty Designs ©2025</h2>
         <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
             <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
           </a>
