Update picture, HTML

--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -23,7 +23,25 @@
         <h2>ITIS 3135 Introduction</h2>
         <p>This is the introduction for my ITIS 3135 class</p>
         <h2>Yordin E. Hasty || Youthful Hedgehog</h2>
-        <img src="./images/profilepic.jpg">
+        <img src="./images/profilepic.jpg" alt="picture of me">
+        <h4><i>Me during NSO</i></h4>
+            <ul>
+                <li><b>Personal Background:</b>  I am from Durham, NC and transferred to UNCC in the fall. 
+                    I am currently majoring in computer science with a concentration in software engineering. As of right now, I am a junior and hoping that I can get into the masters program!</li>
+                <li><b>Professional Background:</b> I have worked at Chick-fil-A for the past four years</li>
+                <li><b>Academic Background:</b>  I graduated from Durham Tech CC with an associate in engineering.</li>
+                <li><b>Background in this Subject:</b>  I have taken self teaching courses for web design before however I am a bit dusty in my skills.</li>
+                <li><b>Primary Computer Platform:</b>  My workstation is a Windows machine while my laptop is a Macbook.</li>
+                <li><b>Courses:</b>
+                    <ul>
+                        <li><b>ITCS3160 - Database Design & Implementation:</b> Required</li>
+                        <li><b>ITSC2181 - Intro to Computer Systems:</b> Required</li>
+                        <li><b>ITCS3156 - Intro to Machine Learning:</b> Curious about machine learning.</li>
+                        <li><b>ITIS3135 - Web-Based Application design:</b> Required</li>
+                        <li><b>ITSC2155 - Software Engineering:</b> Required</li>
+                    </ul>
+                </li>
+            </ul>
     </main>
     <footer>
         <nav>
