--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouthfulHedgehog || ITIS 3135 || Introduction</title>
+    <title>Yordin Hasty's YouthfulHedgehog || ITIS 3135 || Introduction</title>
     <link rel="stylesheet" href="./styles/default.css">
     <script src="https://lint.page/accumulus/accumulator.js" async="" class="accumulusDependency" crossorigin="anonymous"></script>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <h1>YouthfulHedgehog || ITIS 3135</h1>
+        <h1>Yordin Hasty's YouthfulHedgehog || ITIS 3135</h1>
         <nav>
             <a href="./">Home</a>
             ||
@@ -23,8 +23,10 @@
         <h2>ITIS 3135 Introduction</h2>
         <p>This is the introduction for my ITIS 3135 class</p>
         <h2>Yordin E. Hasty || Youthful Hedgehog</h2>
-        <img src="./images/profilepic.jpg" alt="picture of me">
-        <h4><i>Me during NSO</i></h4>
+        <figure>
+            <img src="./images/profilepic.jpg" alt="picture of me" id="profilepic">
+            <figcaption><i>Me during NSO</i></figcaption>
+        </figure>
             <ul>
                 <li><b>Personal Background:</b>  I am from Durham, NC and transferred to UNCC in the fall. 
                     I am currently majoring in computer science with a concentration in software engineering. As of right now, I am a junior and hoping that I can get into the masters program!</li>
@@ -53,7 +55,7 @@
             <a href="https://www.codecademy.com/profiles/yhasty">Codecademy Profile</a> || 
             <a href="https://www.linkedin.com/in/yordinhasty/">LinkedIn Profile</a>
         </nav>
-        <h2>Designed by Hasty Designs ©2025</h2>
+        <h6>Designed by Hasty Designs ©2025</h6>
         <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
             <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
           </a>
