--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yordin Hasty's YouthfulHedgehog || ITIS 3135 || Introduction</title>
+    <title>Yordin Hasty's YouthfulHedgehog || ITIS 3135 || Contract</title>
     <link rel="stylesheet" href="./styles/default.css">
     <script src="https://lint.page/accumulus/accumulator.js" async="" class="accumulusDependency" crossorigin="anonymous"></script>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
@@ -20,32 +20,16 @@
         </nav>
     </header>
     <main>
-        <h2>ITIS 3135 Introduction</h2>
-        <p>This is the introduction for my ITIS 3135 class</p>
-        <h2>Yordin E. Hasty || Youthful Hedgehog</h2>
-        <figure>
-            <img src="./images/profilepic.jpg" alt="picture of me" id="profilepic">
-            <figcaption><i>Me during NSO</i></figcaption>
-        </figure>
-            <ul>
-                <li><b>Personal Background:</b>  I am from Durham, NC and transferred to UNCC in the fall. 
-                    I am currently majoring in computer science with a concentration in software engineering. As of right now, I am a junior and hoping that I can get into the masters program!</li>
-                <li><b>Professional Background:</b> I have worked at Chick-fil-A for the past four years</li>
-                <li><b>Academic Background:</b>  I graduated from Durham Tech CC with an associate in engineering.</li>
-                <li><b>Background in this Subject:</b>  I have taken self teaching courses for web design before however I am a bit dusty in my skills.</li>
-                <li><b>Primary Computer Platform:</b>  My workstation is a Windows machine while my laptop is a Macbook.</li>
-                <li><b>Courses:</b>
-                    <ul>
-                        <li><b>ITCS3160 - Database Design & Implementation:</b> Required</li>
-                        <li><b>ITSC2181 - Intro to Computer Systems:</b> Required</li>
-                        <li><b>ITCS3156 - Intro to Machine Learning:</b> Curious about machine learning.</li>
-                        <li><b>ITIS3135 - Web-Based Application design:</b> Required</li>
-                        <li><b>ITSC2155 - Software Engineering:</b> Required</li>
-                    </ul>
-                </li>
-            </ul>
+        <h2>ITIS 3135 Contract</h2>
+        <p>Contract
+            I, YORDIN E. HASTY agree to abide by the terms of the course contract in my SPRING 2025, ITIS3135, Web-Based Application design with my instructor, 
+            Professor D.I. von Briesen. I understand that all work that I do on publicly available online tools will be available to the world, 
+            and will not put information there that is inappropriate for schoolwork, or that I wish to keep private. I also understand that it 
+            is my work that counts for attendance, not logins or showing up for class. As such, failure to turn in assignments may show as absences. 
+            I also understand that given the structure and content of this class it’s possible to find many examples online or even view my classmates’ 
+            code directly. I swear that I will only use these resources to learn, and will not cut and paste code except where I have properly given credit 
+            (i.e. external libraries) and never from my classmates. Signed: First M. Last , 02/02/2025</p>
     </main>
-    <div class="spacer"></div>
     <footer>
         <h6 id="copyright">Designed by Hasty Designs ©2025</h6>
         <nav>
