--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -23,7 +23,9 @@
         <h2>ITIS 3135 Home</h2>
         <p>This is all the content for my ITIS 3135 class</p>
     </main>
+    <div class="spacer"></div>
     <footer>
+        <h6 id="copyright">Designed by Hasty Designs ©2025</h6>
         <nav>
             <a href="https://webpages.charlotte.edu/yhasty/">UNCC Homepage</a> || 
             <a href="https://github.com/YordinH">Github Repo</a> || 
@@ -33,13 +35,15 @@
             <a href="https://www.codecademy.com/profiles/yhasty">Codecademy Profile</a> || 
             <a href="https://www.linkedin.com/in/yordinhasty/">LinkedIn Profile</a>
         </nav>
-        <h6 id="copyright">Designed by Hasty Designs ©2025</h6>
+        <div class="checkers">
         <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
             <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
           </a>
           <a href="https://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css">
             <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
           </a>
+        
+        </div>
     </footer>
     <script>
         document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
