--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -21,6 +21,7 @@
     <main>
         <h2>ITIS 3135 Home</h2>
         <p>This is all the content for my ITIS 3135 class</p>
+        <a href="./hobby/index.html">Hobby site</a>
     </main>
     <div class="spacer"></div>
     <footer>
