--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -308,7 +308,7 @@
         
     </main>
     <footer>
-        <h5 id="copyright">Designed by <a href="../../index.html">Hasty Designs ©2025</a></h5>
+        <h5 id="copyright">Designed by <a href="../yhastydesign.com/">Hasty Designs ©2025</a></h5>
     </footer>
     <script>
         document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
