--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -46,7 +46,7 @@
     </main>
     <div class="spacer"></div>
     <footer>
-        <h6 id="copyright">Designed by Hasty Designs ©2025</h6>
+        <h6 id="copyright">by <a href="yhastydesign.com/">Hasty Designs</a> ©2025</h6>
         <nav>
             <a href="https://webpages.charlotte.edu/yhasty/">UNCC Homepage</a> || 
             <a href="https://github.com/YordinH">Github Repo</a> || 
