--- a/itis3135/yhastydesign.com/index.html
+++ b/itis3135/yhastydesign.com/index.html
@@ -14,6 +14,13 @@
             display:flex;
             background-color: #dfcfbf;
         }
+        .client-info {
+            display:flex;
+        }
+        .contacts {
+            display:flex;
+            flex-direction: column;
+        }
     </style>
 </head>
 <body>
@@ -23,6 +30,28 @@
     </header>
     <main>
         <h2>YHD Services</h2>
+        <p>YHD is a cutting-edge web design company dedicated to crafting stunning,
+             user-friendly websites tailored to businesses and individuals.
+              With a focus on modern aesthetics, seamless functionality, and strategic branding,
+               YHD ensures that every website not only looks exceptional
+                but also delivers an engaging user experience.
+        </p>
+        <div class="ul-list">
+        <ul>
+            <li>Custom Website Design – Beautiful, responsive, and intuitive websites designed to reflect your brand identity.</li>
+            <li>UI/UX Optimization – Intuitive layouts and smooth navigation to improve user engagement.</li>
+            <li>Website Maintenance & Support – Ongoing updates, security checks, and troubleshooting.</li>
+            <li>Web App Development – Custom web applications for businesses seeking unique online solutions.</li>
+            <li>Branding & Graphic Design – Logos, color palettes, and branding assets to establish a strong identity.</li>
+        </ul>
+        </div>
+        <div class="client-info">
+            <p>What we'll need:</p>
+            <div class="contacts">
+                <h3>Contacts</h3>
+                <p>Email: Phone:s</p>
+            </div>
+        </div>
     </main>
     <footer>
 
