Update Footer Link across site

--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -308,7 +308,10 @@
         
     </main>
     <footer>
-        <h5 id="copyright">Designed by <a href="../yhastydesign.com/">Hasty Designs ©2025</a></h5>
+        <h6 id="copyright">by <a href="yhastydesign.com/">Hasty Designs</a> ©2025, <i>
+            <a href="https://www.freecodecamp.org/certification/yhasty/responsive-web-design"><br>Certified in Responsive Web Design</a>
+            </i>
+        </h6>
     </footer>
     <script>
         document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
