--- a/index.html
+++ b/index.html
@@ -135,7 +135,10 @@
     <div class="spacer"></div>
 	</div>
     <footer>
-        <h6 id="copyright">Designed by Hasty Designs ©2025</h6>
+        <h6 id="copyright">by <a href="yhastydesign.com/">Hasty Designs</a> ©2025, <i>
+            <a href="https://www.freecodecamp.org/certification/yhasty/responsive-web-design"><br>Certified in Responsive Web Design</a>
+            </i>
+        </h6>
         <nav>
             <a href="https://webpages.charlotte.edu/yhasty/">UNCC Homepage</a> || 
             <a href="https://github.com/YordinH">Github Repo</a> || 
