--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -30,7 +30,10 @@
             (i.e. external libraries) and never from my classmates. Signed: First M. Last , 02/02/2025</p>
     </main>
     <footer>
-        <h6 id="copyright">by <a href="yhastydesign.com/">Hasty Designs</a> ©2025</h6>
+        <h6 id="copyright">by <a href="yhastydesign.com/">Hasty Designs</a> ©2025, <i>
+            <a href="https://www.freecodecamp.org/certification/yhasty/responsive-web-design"><br>Certified in Responsive Web Design</a>
+            </i>
+        </h6>
         <nav>
             <a href="https://webpages.charlotte.edu/yhasty/">UNCC Homepage</a> || 
             <a href="https://github.com/YordinH">Github Repo</a> || 
