Update headers and footers

--- a/whimsical_site/about.html
+++ b/whimsical_site/about.html
@@ -27,6 +27,9 @@
                and guaranteed to turn heads — even if you’re just rolling at 25 miles per hour.
         </p>
     </main>
-    <div include-html="../components/footer.html"></div>
+    <footer>
+		<div data-include="../components/footer.html"></div>
+    	<script src="../scripts/HTMLInclude.min.js"></script>
+	</footer>
 </body>
 </html>
