--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
 	</style>
 </head>
 <body>
+	<header>
+		<div data-include="./components/header.html"></div>
+		<script src="./scripts/HTMLInclude.min.js"></script>
+	</header>
 	<div class="background-color">
 		<div include-html="./components/header.html"></div>
     <main>
@@ -126,7 +130,10 @@
     </main>
     <div class="spacer"></div>
 	</div>
-	<div include-html="../components/footer.html"></div>
-    <script src="./scripts/getDocuments.js"></script>
+	<footer>
+		<div data-include="./components/footer.html"></div>
+    	<script src="./scripts/HTMLInclude.min.js"></script>
+	</footer>
+	
 </body>
 </html>
