--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -8,7 +8,10 @@
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <<div include-html="../components/header.html"></div>
+    <header>
+		<div data-include="../components/header.html"></div>
+    	<script src="../scripts/HTMLInclude.min.js"></script>
+	</header>
     <main>
         <h2>ITIS 3135 Home</h2>
         <p>This is all the content for my ITIS 3135 class</p>
@@ -16,9 +19,9 @@
     </main>
     <div class="spacer"></div>
     <div include-html="../components/footer.html"></div>
-    <script>
-        document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
-        document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-    </script>
+    <footer>
+		<div data-include="./components/footer.html"></div>
+    	<script src="./scripts/HTMLInclude.min.js"></script>
+	</footer>
 </body>
 </html>
