--- a/whimsical_site/index.html
+++ b/whimsical_site/index.html
@@ -26,6 +26,9 @@
         you’re in the right place!
         </p>
     </main>
-    <div include-html="../components/footer.html"></div>
+    <footer>
+		<div data-include="../components/footer.html"></div>
+    	<script src="../scripts/HTMLInclude.min.js"></script>
+	</footer>
 </body>
 </html>
